# c_shell

./: .gitignore  CMakeLists.txt  readme.md
include/: error_handling.h  shell.h
src/: main.c  shell.c
